# routes/admin.js
@@ -6,7 +6,7 @@ const Admin_Subject = require('../controls/admin/Subject');
 //1) إضافة طالب جديد عالمعهد
 router.post('/add_student', upload_student.single('photo'), Admin_Student.add_student);
 //2) إضافة فرع جديد
-router.post('/add_new_branch', Admin_Subject.add_class);
+router.post('/add_new_class', Admin_Subject.add_class);
 //3) إضافة مادة جديدة
 router.post('/add_new_subject', Admin_Subject.add_subject)
 module.exports = router;
